src/objects/Document_Type_Field_Picklist_Option__mdt.object
<CustomObject>
    <description>used to manage picklist options for search fields of type &apos;picklist&apos; for document types in communications topic</description>
    <fields>
        <fullName>Document_Type_Search_By_Field__c</fullName>
        <description>The Search By Field in which this object is a picklist option</description>
        <label>Document Type Search By Field</label>
        <referenceTo>Document_Type_Search_By_Field__mdt</referenceTo>
        <relationshipLabel>Document Type Field Picklist Options</relationshipLabel>
        <relationshipName>Document_Type_Field_Picklist_Options</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Option_Name__c</fullName>
        <description>The text to be displayed in the dropdown</description>
        <label>Option Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order that objects should appear in picklist, with smaller numbers at the top at the picklist and larger numbers at the bottom</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Type Field Picklist Option</label>
    <pluralLabel>Document Type Field Picklist Options</pluralLabel>
</CustomObject>